--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -4,14 +4,14 @@ body{
 }
 
 button{
-  display: block;
+  // display: block;
   background: $color-blue;
   color: $color-white;
   cursor: pointer;
   outline: none;
   border: none;
-  width: $l-100;
-  height: $l-40;
-  line-height: $l-40;
+  // width: $l-100;
+  // height: $l-40;
+  // line-height: $l-40;
   text-align: center;
 }
