--- a/src/components/Form/AutoHeightInput/index.scss
+++ b/src/components/Form/AutoHeightInput/index.scss
@@ -8,13 +8,13 @@
   outline: none;
   resize: none;
   max-height: 115px;
-  @include font_color('light');
-  @include bg_color('light');
+  @include font_color();
+  @include bg_color();
 }
 
-@media (prefers-color-scheme: dark) {
-  .auto-height-input{
-    @include bg_color('dark');
-    @include font_color('dark')
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   .auto-height-input{
+//     @include bg_color('dark');
+//     @include font_color('dark')
+//   }
+// }
